Color the day cell backgrounds based on the date month parity

--- a/src/components/IntervalCalendarDay/styles.less
+++ b/src/components/IntervalCalendarDay/styles.less
@@ -3,6 +3,12 @@
 .day {
   display: inline-block;
   width: (1 / 7) * 100%;
-  height: #spacing(5)[];
+  height: #spacing(8)[];
+  line-height: #spacing(8)[];
   text-align: center;
+  background-color: #palette[secondary];
+
+  &__month__even {
+    background-color: #palette[primary];
+  }
 }
