--- a/src/components/IntervalCalendarWeek/styles.less
+++ b/src/components/IntervalCalendarWeek/styles.less
@@ -1,7 +1,7 @@
 .week {
   position: relative;
-  display: block;
-  width: 100%;
+  display: flex;
+  align-items: stretch;
   margin: 0;
   padding: 0;
 }
