Adjust the height - remove the header height from it and define the min width of the calendar

--- a/src/components/IntervalCalendarHeader/styles.less
+++ b/src/components/IntervalCalendarHeader/styles.less
@@ -4,12 +4,14 @@
   display: flex;
   align-items: stretch;
   background-color: #palette[secondary];
+  min-width: #spacing(8)[] * 7;
 
   &__day {
     display: flex;
     justify-content: center;
     align-items: center;
     height: #spacing(5)[];
+    min-width: #spacing(8)[];
     flex: 1;
     font-weight: bold;
     color: #palette.text[primary];
