--- a/src/components/IntervalCalendarWeeks/styles.less
+++ b/src/components/IntervalCalendarWeeks/styles.less
@@ -1,5 +1,9 @@
+@import '../../theme.less';
+
 .weeks {
   position: relative;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: visible;
   height: 500px;
+  min-width: #spacing(8)[] * 7;
 }
