--- a/src/theme.less
+++ b/src/theme.less
@@ -7,8 +7,15 @@
 // Main palette colors comes from
 // https://colorhunt.co/palette/201686
 #palette() {
-  primary: #d6e0f0;
-  secondary: #f1f3f8;
+  .main() {
+    primary: #d6e0f0;
+    secondary: #f1f3f8;
+  }
+
+  .border() {
+    primary: #393b44;
+    secondary: #d5d7dc;
+  }
 
   .text() {
     primary: #393b44;
