Add border and border radius props to the main component

--- a/src/components/IntervalCalendarDay/styles.less
+++ b/src/components/IntervalCalendarDay/styles.less
@@ -32,7 +32,7 @@
     z-index: -1;
   }
   &__even::before {
-    background-color: #palette[secondary];
+    background-color: #palette.main[secondary];
   }
 }
 
@@ -46,7 +46,7 @@
   min-width: #spacing(8)[];
   height: #spacing(8)[];
   color: #palette.text[primary];
-  background-color: #palette[secondary];
+  background-color: #palette.main[secondary];
   cursor: pointer;
 
   &:hover::after {
