--- a/src/components/IntervalCalendarHeader/styles.less
+++ b/src/components/IntervalCalendarHeader/styles.less
@@ -3,7 +3,7 @@
 .header {
   display: flex;
   align-items: stretch;
-  background-color: #palette[secondary];
+  background-color: #palette.main[secondary];
   min-width: #spacing(8)[] * 7;
 
   &__day {
