--- a/src/components/IntervalCalendar/styles.less
+++ b/src/components/IntervalCalendar/styles.less
@@ -8,7 +8,8 @@
 
     &__radius {
       border-radius: #spacing(0.5)[];
-      overflow: hidden;
+      overflow-y: hidden;
+      overflow-x: scroll;
     }
   }
 }
