--- a/src/components/IntervalCalendarDay/styles.less
+++ b/src/components/IntervalCalendarDay/styles.less
@@ -74,9 +74,32 @@
     .monthEdge(last);
   }
 
-  &__detail {
-    color: inherit;
-    font-size: small;
-    font-weight: normal;
+  &__text {
+    z-index: +2;
+
+    &__detail {
+      color: inherit;
+      font-size: small;
+      font-weight: normal;
+    }
+  }
+
+  &__highlighted {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: +1;
+
+    &__first {
+      border-top-left-radius: #spacing(4)[];
+      border-bottom-left-radius: #spacing(4)[];
+    }
+
+    &__last {
+      border-top-right-radius: #spacing(4)[];
+      border-bottom-right-radius: #spacing(4)[];
+    }
   }
 }
