Display the empty component in the main calenader in case of missing date range

--- a/src/components/IntervalCalendar/styles.less
+++ b/src/components/IntervalCalendar/styles.less
@@ -1,6 +1,8 @@
 @import '../../theme.less';
 
 .calendar {
+  position: relative;
+
   &__border {
     border-width: 1px;
     border-style: solid;
