Add useOnScreen hook to IntervalCalendarWeek

--- a/src/components/IntervalCalendarWeek/styles.less
+++ b/src/components/IntervalCalendarWeek/styles.less
@@ -1,7 +1,10 @@
+@import '../../theme.less';
+
 .week {
   position: relative;
   display: flex;
   align-items: stretch;
   margin: 0;
   padding: 0;
+  height: #spacing(8)[];
 }
