Add showMonthStripes prop

--- a/src/components/IntervalCalendarDay/styles.less
+++ b/src/components/IntervalCalendarDay/styles.less
@@ -68,8 +68,11 @@
   }
 
   &__first__of__month {
-    font-weight: bold;
     .monthEdge(first);
+  }
+
+  &__first__of__month__text {
+    font-weight: bold;
   }
 
   &__last__of__month {
