--- a/src/theme.less
+++ b/src/theme.less
@@ -17,6 +17,11 @@
     secondary: #d5d7dc;
   }
 
+  .highlight() {
+    primary: #ffffff;
+    secondary: #263646;
+  }
+
   .text() {
     primary: #393b44;
     secondary: #8d93ab;
