feat: enhance the body components with className props and mixed usage with custom components

--- a/src/components/styles.less
+++ b/src/components/styles.less
@@ -47,17 +47,17 @@
     padding: 0;
     min-height: #spacing(8)[];
   }
-}
 
-.day {
-  position: relative;
-  display: flex;
-  flex: 1;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  min-width: #spacing(8)[];
-  min-height: #spacing(8)[];
+  &__cell {
+    position: relative;
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-width: #spacing(8)[];
+    min-height: #spacing(8)[];
+  }
 }
 
 .empty {
