--- a/src/components/styles.less
+++ b/src/components/styles.less
@@ -18,17 +18,21 @@
     align-items: stretch;
     margin: 0;
     padding: 0;
+    list-style-type: none;
   }
 
   &__cell {
     position: relative;
     display: flex;
     flex: 1;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     min-width: #spacing(8)[];
     min-height: #spacing(5)[];
+
+    &__content {
+      flex: 1;
+      align-self: center;
+      text-align: center;
+    }
   }
 }
 
@@ -46,17 +50,21 @@
     margin: 0;
     padding: 0;
     min-height: #spacing(8)[];
+    list-style-type: none;
   }
 
   &__cell {
     position: relative;
     display: flex;
     flex: 1;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     min-width: #spacing(8)[];
     min-height: #spacing(8)[];
+
+    &__content {
+      flex: 1;
+      align-self: center;
+      text-align: center;
+    }
   }
 }
 
