--- a/src/components/styles.less
+++ b/src/components/styles.less
@@ -2,7 +2,8 @@
 
 .calendar {
   position: relative;
-  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
@@ -19,6 +20,7 @@
     margin: 0;
     padding: 0;
     list-style-type: none;
+    min-height: #spacing(5)[];
   }
 
   &__cell {
@@ -26,7 +28,6 @@
     display: flex;
     flex: 1;
     min-width: #spacing(8)[];
-    min-height: #spacing(5)[];
 
     &__content {
       flex: 1;
@@ -38,9 +39,10 @@
 
 .body {
   position: relative;
+  display: flex;
+  flex-direction: column;
   overflow-y: scroll;
   overflow-x: visible;
-  height: 500px;
   min-width: #spacing(8)[] * 7;
 
   &__row {
@@ -58,7 +60,6 @@
     display: flex;
     flex: 1;
     min-width: #spacing(8)[];
-    min-height: #spacing(8)[];
 
     &__content {
       flex: 1;
